<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ad_i_im"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/advert_item_im_descr"
                app:srcCompat="@drawable/advert_im_placehlder" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="5.23"
                android:orientation="vertical">

                    <TextView
                        android:id="@+id/ad_m_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="13dp"
                        android:text="@string/m_title"
                        android:textAppearance="?attr/textAppearanceListItem" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ad_m_title">

                    <TextView
                        android:id="@+id/ad_i_deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/m_name"
                        android:textAppearance="?attr/textAppearanceListItem" />


                    <TextView
                        android:id="@+id/deposit_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="название объявления"
                        android:textSize="@dimen/ad_i_field_value_size" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/price_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />

                <TextView
                    android:id="@+id/m_price_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/m_for"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <Spinner
                    android:id="@+id/m_price_for_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/price_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_deposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/deposit"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_deposit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/deposit_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/place"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_place_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/place_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/time_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/m_categ"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_cat_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/m_cat_placeh"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/m_ex_cat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/m_ex_cat"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/m_ex_cat_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/m_ex_cat_placeh"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/m_profile_info"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/descr_placeholder" />

    </LinearLayout>


    <Button
        android:id="@+id/make_deal_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@android:color/holo_green_dark"
        android:padding="3dp"
        android:text="@string/make_deal_but_text" />

</RelativeLayout>