<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/make_deal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:padding="3dp"
        android:text="@string/make_deal_but_text"
        android:background="@android:color/holo_green_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ad_i_im"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/advert_item_im_descr"
                app:srcCompat="@drawable/advert_im_placehlder" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="5.23"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ad_i_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="13dp"
                    android:text="@string/price"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/ad_i_price"
                    android:layout_marginTop="5dp"
                    android:text="@string/price_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />

                <TextView
                    android:id="@+id/ad_i_deposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/price_value"
                    android:layout_marginTop="7dp"
                    android:text="@string/deposit"
                    android:textAppearance="?attr/textAppearanceListItem" />


                <TextView
                    android:id="@+id/deposit_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/ad_i_deposit"
                    android:layout_marginTop="5dp"
                    android:text="@string/deposit_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ad_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/place"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/place_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/place_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ad_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textSize="@dimen/ad_i_field_size" />

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/time_placeholder"
                    android:textSize="@dimen/ad_i_field_value_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/user_av"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/advert_item_im_descr"
                app:srcCompat="@drawable/avatar" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="5.23"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/user_name"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/user_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/user_name"
                    android:layout_marginTop="7dp"
                    android:text="@string/user_tel"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/vk_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/user_tel"
                    android:layout_marginTop="7dp"
                    android:text="@string/user_vk"
                    android:textAppearance="?attr/textAppearanceListItem" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/descr_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descr_placeholder" />

    </LinearLayout>

</RelativeLayout>