<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="у вас одна новая сделка"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_deals_list"
        android:name="ru.kazakov.finalproject.MyDealsFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginBottom="30dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="ru.kazakov.finalproject.MyDealsFragment"
        tools:listitem="@layout/fragment_mydeal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_give"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_all"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_take"/>



    </LinearLayout>


</LinearLayout>